pns-isa-devops/projet-isa-devops-20-team-b-20#24 update ci for our current orga